Module2 Assignment final

--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width", initial-scale=1"></meta>
+<meta name="viewport" content="width=device-width">
 <title>Responsive Layout</title>
-<link rel="stylesheet" href="CSS\style.css"></link>
+<link rel="stylesheet" type="text/css" href="CSS\style.css">
 
 </head>
 <body>
@@ -12,7 +11,7 @@
 
 <div class="row">
   <div class="col-lg-4 col-md-6">
-    <h2 id="h21">Chicken</h2> 
+    <h2 id="h21">Chicken</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -46,3 +45,4 @@
 </div>
 
 </body>
+</html>
