--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -3,15 +3,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>Responsive Layout</title>
-<link rel="stylesheet" type="text/css" href="CSS\style.css">
+<link rel="stylesheet" type="text/css" href="CSS/style.css">
 
 </head>
 <body>
 <h1>Our Menu</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6">
-    <h2 id="h21">Chicken</h2>
+  <div class="col-lg-4 col-md-6 col-sm-12">
+  <h2 id="h21">Chicken</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -22,7 +22,7 @@
 
 
   </div>
-  <div class="col-lg-4 col-md-6">
+  <div class="col-lg-4 col-md-6 col-sm-12">
     <h2 id="h22">Beef</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -32,7 +32,7 @@
       pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
       culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
-  <div class="col-lg-4 col-md-12">
+  <div class="col-lg-4 col-md-12 col-sm-12">
     <h2 id="h23">Sushi</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
